@@ -16,11 +16,11 @@ public class TokenizerTest {
     public void testTokenizeNumbers() {
         List<Token> tokens = tokenizer.tokenize("123 45.67 8e2");
         assertEquals(3, tokens.size());
-        assertTrue(tokens.get(0) instanceof NumberToken);
+        assertInstanceOf(NumberToken.class, tokens.get(0));
         assertEquals(123.0, ((NumberToken) tokens.get(0)).getValue());
-        assertTrue(tokens.get(1) instanceof NumberToken);
+        assertInstanceOf(NumberToken.class, tokens.get(1));
         assertEquals(45.67, ((NumberToken) tokens.get(1)).getValue());
-        assertTrue(tokens.get(2) instanceof NumberToken);
+        assertInstanceOf(NumberToken.class, tokens.get(2));
         assertEquals(800.0, ((NumberToken) tokens.get(2)).getValue());
     }
 
@@ -28,9 +28,9 @@ public class TokenizerTest {
     public void testTokenizeStrings() {
         List<Token> tokens = tokenizer.tokenize("\"hello\" 'world'");
         assertEquals(2, tokens.size());
-        assertTrue(tokens.get(0) instanceof StringToken);
+        assertInstanceOf(StringToken.class, tokens.get(0));
         assertEquals("hello", ((StringToken) tokens.get(0)).getValue());
-        assertTrue(tokens.get(1) instanceof StringToken);
+        assertInstanceOf(StringToken.class, tokens.get(1));
         assertEquals("world", ((StringToken) tokens.get(1)).getValue());
     }
 
@@ -38,20 +38,20 @@ public class TokenizerTest {
     public void testTokenizeSpecialCharacters() {
         List<Token> tokens = tokenizer.tokenize("+ - * / ^ %");
         assertEquals(6, tokens.size());
-        assertTrue(tokens.get(0) instanceof OperatorToken);
-        assertTrue(((OperatorToken) tokens.get(0)).getValue() instanceof AddOperator);
-        assertTrue(((OperatorToken) tokens.get(1)).getValue() instanceof MinusOperator);
-        assertTrue(((OperatorToken) tokens.get(2)).getValue() instanceof MultiplyOperator);
-        assertTrue(((OperatorToken) tokens.get(3)).getValue() instanceof DivideOperator);
-        assertTrue(((OperatorToken) tokens.get(4)).getValue() instanceof PowerOperator);
-        assertTrue(((OperatorToken) tokens.get(5)).getValue() instanceof ModuloOperator);
+        assertInstanceOf(OperatorToken.class, tokens.get(0));
+        assertInstanceOf(AddOperator.class, ((OperatorToken) tokens.get(0)).getValue());
+        assertInstanceOf(MinusOperator.class, ((OperatorToken) tokens.get(1)).getValue());
+        assertInstanceOf(MultiplyOperator.class, ((OperatorToken) tokens.get(2)).getValue());
+        assertInstanceOf(DivideOperator.class, ((OperatorToken) tokens.get(3)).getValue());
+        assertInstanceOf(PowerOperator.class, ((OperatorToken) tokens.get(4)).getValue());
+        assertInstanceOf(ModuloOperator.class, ((OperatorToken) tokens.get(5)).getValue());
     }
 
     @Test
     public void testTokenizeComments() {
         List<Token> tokens = tokenizer.tokenize("-- Single line comment\n123");
         assertEquals(2, tokens.size());
-        assertTrue(tokens.get(1) instanceof NumberToken);
+        assertInstanceOf(NumberToken.class, tokens.get(1));
         assertEquals(123.0, ((NumberToken) tokens.get(1)).getValue());
     }
 
@@ -59,42 +59,42 @@ public class TokenizerTest {
     public void testTokenizeLongComments() {
         List<Token> tokens = tokenizer.tokenize("--[[ Multi-line\ncomment ]]123");
         assertEquals(1, tokens.size());
-        assertTrue(tokens.get(0) instanceof NumberToken);
-        assertEquals(123.0, ((NumberToken) tokens.get(0)).getValue());
+        assertInstanceOf(NumberToken.class, tokens.getFirst());
+        assertEquals(123.0, ((NumberToken) tokens.getFirst()).getValue());
     }
 
     @Test
     public void testTokenizeKeywords() {
         List<Token> tokens = tokenizer.tokenize("if else true false nil");
         assertEquals(5, tokens.size());
-        assertTrue(tokens.get(0) instanceof IfToken);
-        assertTrue(tokens.get(1) instanceof ElseToken);
-        assertTrue(tokens.get(2) instanceof BooleanToken);
-        assertEquals(true, ((BooleanToken) tokens.get(2)).getValue());
-        assertTrue(tokens.get(3) instanceof BooleanToken);
-        assertEquals(false, ((BooleanToken) tokens.get(3)).getValue());
-        assertTrue(tokens.get(4) instanceof NilToken);
+        assertInstanceOf(IfToken.class, tokens.get(0));
+        assertInstanceOf(ElseToken.class, tokens.get(1));
+        assertInstanceOf(BooleanToken.class, tokens.get(2));
+        assertTrue(((BooleanToken) tokens.get(2)).getValue());
+        assertInstanceOf(BooleanToken.class, tokens.get(3));
+        assertFalse(((BooleanToken) tokens.get(3)).getValue());
+        assertInstanceOf(NilToken.class, tokens.get(4));
     }
 
     @Test
     public void testTokenizeName() {
         List<Token> tokens = tokenizer.tokenize("variable_name");
         assertEquals(1, tokens.size());
-        assertTrue(tokens.get(0) instanceof NameToken);
-        assertEquals("variable_name", ((NameToken) tokens.get(0)).getValue());
+        assertInstanceOf(NameToken.class, tokens.getFirst());
+        assertEquals("variable_name", ((NameToken) tokens.getFirst()).getValue());
     }
 
     @Test
     public void testTokenizeOperators() {
         List<Token> tokens = tokenizer.tokenize("== ~= <= >= < >");
         assertEquals(6, tokens.size());
-        assertTrue(tokens.get(0) instanceof OperatorToken);
-        assertTrue(((OperatorToken) tokens.get(0)).getValue() instanceof EqualOperator);
-        assertTrue(((OperatorToken) tokens.get(1)).getValue() instanceof UnequalOperator);
-        assertTrue(((OperatorToken) tokens.get(2)).getValue() instanceof LessThanOrEqualOperator);
-        assertTrue(((OperatorToken) tokens.get(3)).getValue() instanceof GreaterThanOrEqualOperator);
-        assertTrue(((OperatorToken) tokens.get(4)).getValue() instanceof LessThanOperator);
-        assertTrue(((OperatorToken) tokens.get(5)).getValue() instanceof GreaterThanOperator);
+        assertInstanceOf(OperatorToken.class, tokens.get(0));
+        assertInstanceOf(EqualOperator.class, ((OperatorToken) tokens.get(0)).getValue());
+        assertInstanceOf(UnequalOperator.class, ((OperatorToken) tokens.get(1)).getValue());
+        assertInstanceOf(LessThanOrEqualOperator.class, ((OperatorToken) tokens.get(2)).getValue());
+        assertInstanceOf(GreaterThanOrEqualOperator.class, ((OperatorToken) tokens.get(3)).getValue());
+        assertInstanceOf(LessThanOperator.class, ((OperatorToken) tokens.get(4)).getValue());
+        assertInstanceOf(GreaterThanOperator.class, ((OperatorToken) tokens.get(5)).getValue());
     }
 
     @Test
